# d-orm

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  publish.yml  test.yml
bench/: README.md  compare.py  run.py
djanorm-mypy/: CHANGELOG.md  README.md  pyproject.toml
djanorm-mypy/djanorm_mypy/: __init__.py  plugin.py
docs/: advanced.en.md  advanced.es.md  async.en.md  async.es.md  bench.en.md  bench.es.md  bulk-copy.en.md  bulk-copy.es.md  cache_redis.en.md  cache_redis.es.md  circuit-breaker.en.md  circuit-breaker.es.md  cli.en.md  cli.es.md  cookbook.en.md  cookbook.es.md  duckdb.en.md  duckdb.es.md  fastapi.en.md  fastapi.es.md  getting-started.en.md  getting-started.es.md  gis.en.md  gis.es.md  helpers.en.md  helpers.es.md  history.en.md  history.es.md  idempotency.en.md  idempotency.es.md  index.en.md  index.es.md  index.md  lag-router.en.md  lag-router.es.md  libsql.en.md  libsql.es.md  listen-notify.en.md  listen-notify.es.md  migration-from-django.en.md  (+52 more)
docs/api/: asyncguard.en.md  asyncguard.es.md  asyncmodel.en.md  audit.en.md  audit.es.md  auth.en.md  auth.es.md  budget.en.md  bulk_copy.en.md  cache.en.md  cache.es.md  circuit_breaker.en.md  connection.en.md  connection.es.md  connection.md  encrypted.en.md  encrypted.es.md  factories.en.md  factories.es.md  gdpr.en.md  gdpr.es.md  gis.es.md  idempotency.md  lag_router.en.md  listen_notify.en.md  matview.en.md  matview.es.md  migrations_lint.en.md  migrations_lint.es.md  models.en.md  models.es.md  observability.en.md  observability.es.md  outbox.md  outbox_cdc.en.md  outbox_cdc.es.md  pgvector.en.md  pgvector.es.md  prepared_stmts.en.md  prepared_stmts.es.md  (+20 more)
dorm/: __init__.py  _memoized_setting.py  _scoped.py  aggregates.py  budget.py  cli.py  conf.py  constraints.py  exceptions.py  expressions.py  factories.py  fields.py  functions.py  indexes.py  inspect.py  lookups.py  manager.py  models.py  query.py  queryset.py  related_managers.py  search.py  serialize.py  signals.py  storage.py  test.py  transaction.py  tree.py  validators.py
dorm/cache/: __init__.py  invalidation.py  locmem.py  redis.py
dorm/contrib/: active_passive.py  advisory.py  anonymizer.py  asgi.py  asyncguard.py  asyncmodel.py  audit.py  background.py  bulk_copy.py  circuit_breaker.py  cockroach.py  concurrency.py  dataloader.py  encrypted.py  extra_fields.py  gdpr.py  history.py  idempotency.py  inbox.py  lag_router.py  listen_notify.py  litestar.py  matview.py  migrate_from_django.py  nplusone.py  otel.py  outbox.py  outbox_cdc.py  permissions.py  pii.py  plan_drift.py  pool_autoscale.py  prepared_stmts.py  prometheus.py  pydantic.py  querycount.py  querylog.py  querystats.py  rate_limit.py  row_cache.py  (+15 more)
dorm/contrib/auth/: __init__.py  management.py  models.py  password.py  tokens.py
dorm/contrib/auth/migrations/: 0001_initial.py
dorm/contrib/contenttypes/: __init__.py  fields.py  models.py
dorm/contrib/gis/: __init__.py  fields.py  lookups.py
dorm/contrib/pgvector/: __init__.py  expressions.py  fields.py  indexes.py  operations.py  reranker.py
dorm/contrib/storage/: __init__.py  s3.py
dorm/db/: connection.py  utils.py
dorm/db/backends/: cockroach.py  duckdb.py  libsql.py  mysql.py  postgresql.py  sqlite.py
dorm/migrations/: aexecutor.py  autodetector.py  executor.py  lint.py  loader.py  operations.py  recorder.py  schema.py  squasher.py  state.py  writer.py
example/: demo_async.py  demo_sync.py  fast_dorm.py  fast_dorm_v4.py  models.py  run_all.py  settings.py  setup_db.py  smoke.py
example/sales/: models.py
pytest-djanorm/: CHANGELOG.md  README.md  pyproject.toml
pytest-djanorm/pytest_djanorm/: __init__.py  plugin.py
tests/: conftest.py  models.py  test_advisory_lock.py  test_alter_column_type_online.py  test_asgi_middleware.py  test_async.py  test_async_concurrency.py  test_async_model.py  test_async_parity.py  test_async_schema_editor.py  test_async_signals.py  test_audit.py  test_audit_fixes.py  test_backend_branches.py  test_backend_entry_points.py  test_batched_dml.py  test_budget.py  test_bug_hunt_v2_4.py  test_bug_hunt_v2_5.py  test_bug_hunt_v2_6.py  test_bug_hunt_v2_7.py  test_bulk_copy.py  test_bulk_edge_cases.py  test_bulk_update_when.py  test_circuit_breaker.py  test_cli.py  test_cli_inprocess.py  test_cockroach_backend.py  test_connection_for.py  test_coverage.py  test_coverage_deep.py  test_coverage_extra.py  test_coverage_optims.py  test_coverage_uplift_v2_4.py  test_diff_cli.py  test_django_parity_features.py  test_doctor_storages.py  test_duckdb_backend.py  test_export_json_schema.py  test_factories.py  (+158 more)
