[project]
name = "djanorm"
version = "2.4.0"
description = "A Django-like ORM with synchronous and asynchronous support"
readme = "README.md"
authors = [{ name = "Ricardo Robles", email = "ricardo.r.f@hotmail.com" }]
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["orm", "database", "django", "async", "sql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
[project.urls]
Homepage = "https://rroblf01.github.io/d-orm/"
Repository = "https://github.com/rroblf01/d-orm/"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ty>=0.0.33",
    "ruff>=0.15.12",
    "testcontainers[postgres,minio]>=4.14.2",
    "pytest-xdist>=3.8.0",
    # ``pytest-timeout`` is mandatory in the test suite — pyproject's
    # ``[tool.pytest.ini_options]`` sets ``timeout = 60`` so the runner
    # surfaces a hanging test as a fast failure (with a faulthandler
    # stack dump) instead of letting the whole CI job stall.
    "pytest-timeout>=2.4.0",
    # Used by tests for ``dorm.contrib.otel``. The runtime feature is
    # opt-in (raises ImportError if the user calls ``instrument()``
    # without installing OTel themselves), but the test suite exercises
    # the wiring end-to-end to keep that opt-in path from breaking.
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    # boto3 powers the integration tests for ``dorm.contrib.storage.s3``
    # against a MinIO container (see ``tests/test_s3_storage_minio.py``).
    # Same opt-in rationale as the OTel deps above — the runtime
    # feature is gated behind ``djanorm[s3]`` but the tests cover the
    # wiring end-to-end.
    "boto3>=1.42.96",
    # FastAPI integration is documented (docs/fastapi.md) but not a
    # runtime dep of dorm itself. The tests in
    # ``tests/test_fastapi_filefield.py`` spin up a real ASGI app via
    # ``TestClient`` to validate the multipart-upload → FileField
    # pipeline end-to-end. ``httpx`` is what TestClient uses under
    # the hood; ``python-multipart`` is FastAPI's runtime dep for
    # ``UploadFile`` / ``Form`` parsing.
    "fastapi>=0.115",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    # Pillow powers tests for ``dorm.ImageField``. Same opt-in
    # rationale as the other extras; production users only install
    # ``djanorm[image]`` if they actually use ImageField.
    "Pillow>=10.0",
]
# Standalone group for users who want to wire dorm.contrib.otel — kept
# separate from ``dev`` so production installs don't pull SDK + exporters.
otel = [
    "opentelemetry-api>=1.30.0",
]
# aiosqlite: pinned <0.23 because the daemon-thread fix in
# dorm/db/backends/sqlite.py reads the private `_thread` attribute on
# aiosqlite.Connection. Untested on 0.23+; bump only after verifying the
# attribute name still exists (and update the runtime warning if not).
sqlite = ["aiosqlite>=0.22.1,<0.23"]
postgresql = ["psycopg[binary,pool]>=3.3.3"]
# Optional S3 storage backend for ``dorm.FileField`` — see
# ``dorm.contrib.storage.s3``. boto3 picks up credentials from the
# ambient environment (IAM role, ``~/.aws/credentials``, env vars) by
# default; settings.STORAGES['default']['OPTIONS'] can override.
s3 = ["boto3>=1.42.96"]
# Pillow powers ``dorm.ImageField`` — used at assignment time to
# verify uploads parse as recognisable images before they hit
# storage. Skip this extra if you only use ``FileField``.
image = ["Pillow>=10.0"]
# Optional Pydantic v2 interop — needed for dorm.contrib.pydantic.schema_for(),
# which generates FastAPI-friendly request/response schemas from dorm models.
# Email/URL/IP format validation is done by dorm's own field code on
# assignment (so payloads are rejected even if you don't use a Pydantic
# schema at the boundary), so pydantic.EmailStr / HttpUrl are NOT used and
# email-validator is not required.
pydantic = ["pydantic>=2.0"]
# Vector-search support — enables ``VectorField``, distance
# expressions and ANN-index helpers under ``dorm.contrib.pgvector``.
# The extra installs both backends' Python packages:
#   * ``pgvector`` registers a psycopg adapter for PostgreSQL.
#   * ``sqlite-vec`` ships the loadable extension binary that
#     :class:`VectorExtension` loads on every SQLite connection.
# The actual server-side extension still has to be installed
# (``apt install postgresql-XX-pgvector`` for PG; sqlite-vec is
# entirely client-side, so the pip package is enough).
pgvector = [
    "pgvector>=0.3",
    "sqlite-vec>=0.1",
]
# Build the API reference site at https://rroblf01.github.io/d-orm/
# locally: ``uv run mkdocs serve``
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-static-i18n>=1.3.1",
]
all = ["djanorm[dev,sqlite,postgresql,pydantic,docs,otel,s3,image,pgvector]"]

[project.scripts]
dorm = "dorm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dorm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Share a single event loop across all async tests in a session so async
# DB pools don't accumulate one stale set of connections per test (which
# under xdist could leave PG sessions deadlocked between fixture cleanups).
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
# Hard ceiling per test. CI was hanging silently when a psycopg async
# cursor got cancelled mid-flight and left the pool wedged — the
# runner would time out the whole job with no signal pointing at the
# culprit. ``timeout_method = "thread"`` dumps the hanging thread's
# stack via ``faulthandler`` before raising, so the next regression
# tells us *which* test (and which line) is stuck. 60 s is well above
# every legitimate slow path in the suite (~2.7 s setup + ~0.5 s call
# for the slowest stress test).
timeout = 60
timeout_method = "thread"

[tool.ty.src]
# `example/` ships demo / FastAPI code that imports optional packages
# (fastapi, uvicorn) that aren't part of djanorm's runtime extras. Skip it.
exclude = ["example/**"]
