[project]
name = "djanorm-mypy"
version = "0.1.0"
description = "mypy plugin for djanorm — narrows QuerySet generics, validates lookup kwargs, and unwraps Field[T] descriptors at the type level."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ricardo Robles", email = "ricardo.r.f@hotmail.com" }]
keywords = ["djanorm", "mypy", "plugin", "orm", "type-checking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "mypy>=1.13",
    "djanorm>=4.0",
]

[project.urls]
Homepage = "https://github.com/rroblf01/d-orm"
Repository = "https://github.com/rroblf01/d-orm"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-mypy-plugins>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["djanorm_mypy"]
