[project]
name = "pytest-djanorm"
version = "0.1.0"
description = "pytest plugin for djanorm — fixtures for transactional tests, sync/async clients, PG/MySQL containers, and N+1 guards."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ricardo Robles", email = "ricardo.r.f@hotmail.com" }]
keywords = ["djanorm", "pytest", "plugin", "orm", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=8.0",
    "djanorm>=4.0",
]

[project.urls]
Homepage = "https://github.com/rroblf01/d-orm"
Repository = "https://github.com/rroblf01/d-orm"

[project.entry-points.pytest11]
djanorm = "pytest_djanorm.plugin"

[project.optional-dependencies]
postgres = ["testcontainers[postgres]>=4.14.2"]
mysql = ["testcontainers[mysql]>=4.14.2"]
async = ["pytest-asyncio>=1.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pytest_djanorm"]
